2006-06-07  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Check.py (check_for_broken_family_links): Adapt to
	RelLib changes.

2006-06-07  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix child/parent relationships

2006-06-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: read gedcoms that we write
	* src/GrampsDb/_WriteGedcom.py: read gedcoms that we write
	* src/DisplayState.py: handle unset active person

2006-06-06  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_BareReportDialog.py: missing import (Bug #0000180)

2006-06-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: More improvements, esp. with REPO
	* example/gedcom/sample.ged: add repo info

2006-06-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (start_eventref): Only set birth and
	death references for events with primary role.
	* src/GrampsDb/_DbUtils.py (set_birth_death_index): Only set birth
	and death references for events with primary role.

2006-06-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: more improvements

2006-06-05  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/BookReport.py (BookReportDialog.__init__): Correctly
	close managed window.

2006-06-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: improve parsing, comment the code better
	* example/gedcom/sample.ged: add new stuff
	* src/Mime/_PythonMime.py (_type_map): register .gpkg for non-linux
	platforms 

2006-06-04  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Set up for the next release.
	* src/Filters/Rules/Person/_RegExpName.py (RegExpName.labels): Typo.

2006-06-04  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/PSDrawDoc.py: fix imports - make it work
	* src/ReportBase/_StyleEditor.py: use ManagedWindow
	* src/ReportBase/_BareReportDialog.py: import StyleEditor