@@ -4,6 +4,7 @@
 
 2006-06-07  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadGedcom.py: fix child/parent relationships
+	* src/GrampsDb/_GedTokens.py: handle some obscure tokens
 
 2006-06-06  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadGedcom.py: read gedcoms that we write
